--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,6 +12,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.TookDamage",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Protect",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Shell",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Charm",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Dead",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Poison",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="Weapon.Hit",DevComment="")
 
