TargetSystem and AttributeSet
The target system now works when cycling targets left and right.
Added EXP attributes for the starting 6 jobs.

ToDo: Get AI Perception to detect enemies/allies.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,3 +79,7 @@ AssetManagerClassName=/Script/XIRemix.XIAssetManager
 bEnableDebuggerPlugin=True
 bForgetStaleActors=False
 
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
+
