--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,11 +10,20 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Faction.Player.Ally",DevComment="")
 +GameplayTagList=(Tag="Faction.Player.Party",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.TookDamage",DevComment="")
++GameplayTagList=(Tag="State.Buff.Blink",DevComment="")
++GameplayTagList=(Tag="State.Buff.Haste",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Protect",DevComment="")
++GameplayTagList=(Tag="State.Buff.Regen",DevComment="")
++GameplayTagList=(Tag="State.Buff.ReRaise",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Shell",DevComment="")
++GameplayTagList=(Tag="State.Buff.Stoneskin",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Bio",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Charm",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Dead",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Dia",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Paralyze",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Poison",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Slow",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="Weapon.Hit",DevComment="")
 
