--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -132,14 +132,15 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
-+AxisMappings=(AxisName="CycleMenuRight",Scale=1.000000,Key=Gamepad_DPad_Right)
-+AxisMappings=(AxisName="CycleMenuRight",Scale=-1.000000,Key=Gamepad_DPad_Left)
-+AxisMappings=(AxisName="CycleMenuRight",Scale=1.000000,Key=Right)
-+AxisMappings=(AxisName="CycleMenuRight",Scale=-1.000000,Key=Left)
-+AxisMappings=(AxisName="CycleMenuUp",Scale=-1.000000,Key=Gamepad_DPad_Up)
-+AxisMappings=(AxisName="CycleMenuUp",Scale=1.000000,Key=Gamepad_DPad_Down)
-+AxisMappings=(AxisName="CycleMenuUp",Scale=-1.000000,Key=Up)
-+AxisMappings=(AxisName="CycleMenuUp",Scale=1.000000,Key=Down)
++AxisMappings=(AxisName="CycleRight",Scale=1.000000,Key=Gamepad_DPad_Right)
++AxisMappings=(AxisName="CycleRight",Scale=-1.000000,Key=Gamepad_DPad_Left)
++AxisMappings=(AxisName="CycleRight",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="CycleRight",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="CycleUp",Scale=-1.000000,Key=Gamepad_DPad_Up)
++AxisMappings=(AxisName="CycleUp",Scale=1.000000,Key=Gamepad_DPad_Down)
++AxisMappings=(AxisName="CycleUp",Scale=-1.000000,Key=Up)
++AxisMappings=(AxisName="CycleUp",Scale=1.000000,Key=Down)
++AxisMappings=(AxisName="CycleRight",Scale=1.000000,Key=Tab)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
