--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -28,7 +28,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Buff.Stoneskin",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Bio",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Charm",DevComment="")
-+GameplayTagList=(Tag="State.Debuff.Dead",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Dia",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Paralyze",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Poison",DevComment="")
@@ -36,7 +35,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.AutoAttacking",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.Casting",DevComment="")
++GameplayTagList=(Tag="State.Gameplay.Dead",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.JobAbility",DevComment="")
++GameplayTagList=(Tag="State.Gameplay.WeaponsOut",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Dark",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Earth",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Fire",DevComment="")
