Added FunctionLibrary and Ability Task for waiting on montage.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -17,6 +17,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DamageType.Physical",DevComment="")
 +GameplayTagList=(Tag="DamageType.Water",DevComment="")
 +GameplayTagList=(Tag="DamageType.Wind",DevComment="")
++GameplayTagList=(Tag="Event.Montage.ApplyEffect",DevComment="")
 +GameplayTagList=(Tag="Faction.Enemy",DevComment="")
 +GameplayTagList=(Tag="Faction.Hero",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Blink",DevComment="")
