AggroSystem, AutoAttack, XITargetSystem
Built out component for aggro system. Including a custom teams interface.

Basic AutoAttack structure built out.

Pulled XITargetSphere into the target system component.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,6 @@
 ProjectID=311D61B24CB97A028B8B008A84331AE1
 ProjectName=XIRemix
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+AbilitySystemGlobalsClassName="/Script/XIRemix.XIAbilitySystemGlobals"
+
