--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -3,8 +3,6 @@ ImportTagsFromConfig=True
 WarnOnInvalidTags=True
 FastReplication=False
 InvalidTagCharacters="\"\',"
-+GameplayTagRedirects=(OldTagName="Faction.Player.Ally",NewTagName="Faction.Player.Al")
-+GameplayTagRedirects=(OldTagName="State.Gameplay.AutoAttack",NewTagName="State.Gameplay.AutoAttacking")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DamageType.Dark",DevComment="")
@@ -17,15 +15,17 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DamageType.Physical",DevComment="")
 +GameplayTagList=(Tag="DamageType.Water",DevComment="")
 +GameplayTagList=(Tag="DamageType.Wind",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Complete",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.MeleeAttack",DevComment="")
-+GameplayTagList=(Tag="Faction.Enemy",DevComment="")
-+GameplayTagList=(Tag="Faction.Hero",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Blink",DevComment="")
++GameplayTagList=(Tag="State.Buff.Deodorize",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Haste",DevComment="")
++GameplayTagList=(Tag="State.Buff.Invisible",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Protect",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Regen",DevComment="")
 +GameplayTagList=(Tag="State.Buff.ReRaise",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Shell",DevComment="")
++GameplayTagList=(Tag="State.Buff.Sneak",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Stoneskin",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Bio",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Charm",DevComment="")
@@ -37,6 +37,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Gameplay.AutoAttacking",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.Casting",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.Dead",DevComment="")
++GameplayTagList=(Tag="State.Gameplay.InCombat",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.JobAbility",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.WeaponsOut",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Dark",DevComment="")
@@ -47,6 +48,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.MagicBurst.Lightning",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Water",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Wind",DevComment="")
++GameplayTagList=(Tag="State.MainJob.BlackMage",DevComment="")
++GameplayTagList=(Tag="State.MainJob.Monk",DevComment="")
++GameplayTagList=(Tag="State.MainJob.RedMage",DevComment="")
++GameplayTagList=(Tag="State.MainJob.Thief",DevComment="")
++GameplayTagList=(Tag="State.MainJob.Warrior",DevComment="")
++GameplayTagList=(Tag="State.MainJob.WhiteMage",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Dark",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Earth",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Fire",DevComment="")
@@ -55,4 +62,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.SkillChain.Lightning",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Water",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Wind",DevComment="")
++GameplayTagList=(Tag="State.SubJob.BlackMage",DevComment="")
++GameplayTagList=(Tag="State.SubJob.Monk",DevComment="")
++GameplayTagList=(Tag="State.SubJob.RedMage",DevComment="")
++GameplayTagList=(Tag="State.SubJob.Thief",DevComment="")
++GameplayTagList=(Tag="State.SubJob.Warrior",DevComment="")
++GameplayTagList=(Tag="State.SubJob.WhiteMage",DevComment="")
 
