--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -5,6 +5,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Cooldown.WhiteMagic.Test",DevComment="")
 +GameplayTagList=(Tag="DamageType.Dark",DevComment="")
 +GameplayTagList=(Tag="DamageType.Earth",DevComment="")
 +GameplayTagList=(Tag="DamageType.Fire",DevComment="")
@@ -15,6 +16,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DamageType.Physical",DevComment="")
 +GameplayTagList=(Tag="DamageType.Water",DevComment="")
 +GameplayTagList=(Tag="DamageType.Wind",DevComment="")
++GameplayTagList=(Tag="Data.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Complete",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.MeleeAttack",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Blink",DevComment="")
@@ -32,6 +34,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Debuff.Dia",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Paralyze",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Poison",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Silence",DevComment="")
++GameplayTagList=(Tag="State.Debuff.Sleep",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Slow",DevComment="")
 +GameplayTagList=(Tag="State.Debuff.Stun",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.AutoAttacking",DevComment="")
@@ -40,6 +44,18 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Gameplay.InCombat",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.JobAbility",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.WeaponsOut",DevComment="")
++GameplayTagList=(Tag="State.Job.BlackMage.Main",DevComment="")
++GameplayTagList=(Tag="State.Job.BlackMage.Sub",DevComment="")
++GameplayTagList=(Tag="State.Job.Monk.Main",DevComment="")
++GameplayTagList=(Tag="State.Job.Monk.Sub",DevComment="")
++GameplayTagList=(Tag="State.Job.RedMage.Main",DevComment="")
++GameplayTagList=(Tag="State.Job.RedMage.Sub",DevComment="")
++GameplayTagList=(Tag="State.Job.Thief.Main",DevComment="")
++GameplayTagList=(Tag="State.Job.Thief.Sub",DevComment="")
++GameplayTagList=(Tag="State.Job.Warrior.Main",DevComment="")
++GameplayTagList=(Tag="State.Job.Warrior.Sub",DevComment="")
++GameplayTagList=(Tag="State.Job.WhiteMage.Main",DevComment="")
++GameplayTagList=(Tag="State.Job.WhiteMage.Sub",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Dark",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Earth",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Fire",DevComment="")
@@ -48,12 +64,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.MagicBurst.Lightning",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Water",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Wind",DevComment="")
-+GameplayTagList=(Tag="State.MainJob.BlackMage",DevComment="")
-+GameplayTagList=(Tag="State.MainJob.Monk",DevComment="")
-+GameplayTagList=(Tag="State.MainJob.RedMage",DevComment="")
-+GameplayTagList=(Tag="State.MainJob.Thief",DevComment="")
-+GameplayTagList=(Tag="State.MainJob.Warrior",DevComment="")
-+GameplayTagList=(Tag="State.MainJob.WhiteMage",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Dark",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Earth",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Fire",DevComment="")
@@ -62,10 +72,4 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.SkillChain.Lightning",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Water",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Wind",DevComment="")
-+GameplayTagList=(Tag="State.SubJob.BlackMage",DevComment="")
-+GameplayTagList=(Tag="State.SubJob.Monk",DevComment="")
-+GameplayTagList=(Tag="State.SubJob.RedMage",DevComment="")
-+GameplayTagList=(Tag="State.SubJob.Thief",DevComment="")
-+GameplayTagList=(Tag="State.SubJob.Warrior",DevComment="")
-+GameplayTagList=(Tag="State.SubJob.WhiteMage",DevComment="")
 
