--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -17,6 +17,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DamageType.Water",DevComment="")
 +GameplayTagList=(Tag="DamageType.Wind",DevComment="")
 +GameplayTagList=(Tag="Data.Cooldown",DevComment="")
++GameplayTagList=(Tag="Data.Power",DevComment="")
++GameplayTagList=(Tag="Data.Threat",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Complete",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.MeleeAttack",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Blink",DevComment="")
