Skill Attributes + PC/AI Controller
Added the skill attributes Melee/Range/Magic/Defense to the global attribute set.

Now using the Controller to control the pawn entirely. Binding to events generated on the pawn.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,11 +14,15 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DamageType.Lightning",DevComment="")
 +GameplayTagList=(Tag="DamageType.NonElemental",DevComment="")
 +GameplayTagList=(Tag="DamageType.Physical",DevComment="")
++GameplayTagList=(Tag="DamageType.Physical.Blunt",DevComment="")
++GameplayTagList=(Tag="DamageType.Physical.Pierce",DevComment="")
++GameplayTagList=(Tag="DamageType.Physical.Slash",DevComment="")
 +GameplayTagList=(Tag="DamageType.Water",DevComment="")
 +GameplayTagList=(Tag="DamageType.Wind",DevComment="")
 +GameplayTagList=(Tag="Data.Cooldown",DevComment="")
++GameplayTagList=(Tag="Data.CumulativeEnmity",DevComment="")
 +GameplayTagList=(Tag="Data.Power",DevComment="")
-+GameplayTagList=(Tag="Data.Threat",DevComment="")
++GameplayTagList=(Tag="Data.VolatileEnmity",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Complete",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.MeleeAttack",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Blink",DevComment="")
