AsyncGameplayTagChanged + AutoAttack Changes
Added a AsyncGameplayTagChanged c++ module for blueprint.

Modified the AutoAttack to use a timer instead of a delay. To allow spells/JAs/Weapon Skills etc.. to pause the AutoAttack timer and resume based on GameplayTags being added or removed.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -21,6 +21,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DamageType.Wind",DevComment="")
 +GameplayTagList=(Tag="Data.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Data.CumulativeEnmity",DevComment="")
++GameplayTagList=(Tag="Data.Duration",DevComment="")
 +GameplayTagList=(Tag="Data.Power",DevComment="")
 +GameplayTagList=(Tag="Data.VolatileEnmity",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Complete",DevComment="")
