JobTagRelationship + AbilitySets + Exec Calcs
Created JobTagRelationship and Ability Set DataAssets. Makes it easy to check the Hero characters level with Job Tags. Ability Sets allows easy assignment of default abilities and GEs to characters.

Refactored XICharacter code to use Ability Sets.

Exec Calcs were moved to their own folder in Abilities and frameworks built for applying EXP and dealing damage.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -19,13 +19,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DamageType.Physical.Slash",DevComment="")
 +GameplayTagList=(Tag="DamageType.Water",DevComment="")
 +GameplayTagList=(Tag="DamageType.Wind",DevComment="")
-+GameplayTagList=(Tag="Data.Cooldown",DevComment="")
-+GameplayTagList=(Tag="Data.CumulativeEnmity",DevComment="")
-+GameplayTagList=(Tag="Data.Duration",DevComment="")
-+GameplayTagList=(Tag="Data.Power",DevComment="")
-+GameplayTagList=(Tag="Data.VolatileEnmity",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Complete",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.MeleeAttack",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Cooldown",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Duration",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Potency",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Blink",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Deodorize",DevComment="")
 +GameplayTagList=(Tag="State.Buff.Haste",DevComment="")
@@ -51,18 +49,18 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Gameplay.InCombat",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.JobAbility",DevComment="")
 +GameplayTagList=(Tag="State.Gameplay.WeaponsOut",DevComment="")
-+GameplayTagList=(Tag="State.Job.BlackMage.Main",DevComment="")
-+GameplayTagList=(Tag="State.Job.BlackMage.Sub",DevComment="")
-+GameplayTagList=(Tag="State.Job.Monk.Main",DevComment="")
-+GameplayTagList=(Tag="State.Job.Monk.Sub",DevComment="")
-+GameplayTagList=(Tag="State.Job.RedMage.Main",DevComment="")
-+GameplayTagList=(Tag="State.Job.RedMage.Sub",DevComment="")
-+GameplayTagList=(Tag="State.Job.Thief.Main",DevComment="")
-+GameplayTagList=(Tag="State.Job.Thief.Sub",DevComment="")
-+GameplayTagList=(Tag="State.Job.Warrior.Main",DevComment="")
-+GameplayTagList=(Tag="State.Job.Warrior.Sub",DevComment="")
-+GameplayTagList=(Tag="State.Job.WhiteMage.Main",DevComment="")
-+GameplayTagList=(Tag="State.Job.WhiteMage.Sub",DevComment="")
++GameplayTagList=(Tag="State.Job.Main.BlackMage",DevComment="")
++GameplayTagList=(Tag="State.Job.Main.Monk",DevComment="")
++GameplayTagList=(Tag="State.Job.Main.RedMage",DevComment="")
++GameplayTagList=(Tag="State.Job.Main.Thief",DevComment="")
++GameplayTagList=(Tag="State.Job.Main.Warrior",DevComment="")
++GameplayTagList=(Tag="State.Job.Main.WhiteMage",DevComment="")
++GameplayTagList=(Tag="State.Job.Sub.BlackMage",DevComment="")
++GameplayTagList=(Tag="State.Job.Sub.Monk",DevComment="")
++GameplayTagList=(Tag="State.Job.Sub.RedMage",DevComment="")
++GameplayTagList=(Tag="State.Job.Sub.Thief",DevComment="")
++GameplayTagList=(Tag="State.Job.Sub.Warrior",DevComment="")
++GameplayTagList=(Tag="State.Job.Sub.WhiteMage",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Dark",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Earth",DevComment="")
 +GameplayTagList=(Tag="State.MagicBurst.Fire",DevComment="")
