--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -21,6 +21,93 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="DamageType.Wind",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Complete",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.MeleeAttack",DevComment="")
++GameplayTagList=(Tag="Event.Montage.MeleeAttack.MainHand",DevComment="")
++GameplayTagList=(Tag="Event.Montage.MeleeAttack.SubHand",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Accuracy",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Agility",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.AmnesiaResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.ArcherySkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Attack",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.AttackSpeed",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.AxeSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.BindResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.BlindResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.BlueMagicSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.CastSpeed",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Charisma",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.ClubSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.CriticalHitBonus",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.CriticalHitRate",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.CurePotency",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.CureReceivedPotency",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.DaggerSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.DamageResist",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.DarkMagicSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.DarkResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Defense",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Dexterity",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.DivineMagicSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.EarthResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.ElementalMagicSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.EnfeeblingMagicSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.EnhancingMagicSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.EnmityRate",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Evasion",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.EvasionSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.FireResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.GeomancySkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.GravityResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.GreatAxeSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.GreatKatanaSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.GreatSwordSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.GuardSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.HandbellSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.HandToHandSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.HealingMagicSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.HitPointsMax",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.IceResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Intelligence",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.KatanaSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.LightningResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.LightResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.MagicAccuracy",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.MagicAttack",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.MagicCriticalHitBonus",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.MagicCriticalHitRate",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.MagicEvasion",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.ManaPointsMax",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.MarksmanshipSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Mind",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.MoveSpeed",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.NinjutsuSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.ParalyzeResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.ParrySkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.PetrifyResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.PoisonResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.PolearmSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.RangedAccuracy",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.RangedAttack",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.RangedAttackSpeed",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.RangedCriticalHitBonus",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.RangedCriticalHitRate",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.ScytheSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.ShieldSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.SilenceResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.SingingSkil",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.SleepResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.SlowResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.SpellInterruption",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.StaffSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Strength",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.StringSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.SummoningMagicSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.SwordSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.ThrowingSkill",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.VirusResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.Vitality",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.WaterResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.WindResistance",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Attributes.WindSkill",DevComment="")
 +GameplayTagList=(Tag="SetByCaller.Cooldown",DevComment="")
 +GameplayTagList=(Tag="SetByCaller.Duration",DevComment="")
 +GameplayTagList=(Tag="SetByCaller.Potency",DevComment="")
@@ -77,4 +164,23 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.SkillChain.Lightning",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Water",DevComment="")
 +GameplayTagList=(Tag="State.SkillChain.Wind",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Axe",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Club",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Dagger",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.GreatAxe",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.GreatKatana",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.GreatSword",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.HandToHand",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Katana",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Polearm",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Scythe",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Staff",DevComment="")
++GameplayTagList=(Tag="Weapon.Melee.Sword",DevComment="")
++GameplayTagList=(Tag="Weapon.Ranged",DevComment="")
++GameplayTagList=(Tag="Weapon.Ranged.Archery",DevComment="")
++GameplayTagList=(Tag="Weapon.Ranged.Marksmanship",DevComment="")
++GameplayTagList=(Tag="Weapon.Ranged.String",DevComment="")
++GameplayTagList=(Tag="Weapon.Ranged.Throwing",DevComment="")
++GameplayTagList=(Tag="Weapon.Ranged.Wind",DevComment="")
 
