--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,4 +81,5 @@ AssetManagerClassName=/Script/XIRemix.XIAssetManager
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
+bAllowHighDPIInGameMode=True
 
