--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,3 +83,17 @@ AssetManagerClassName=/Script/XIRemix.XIAssetManager
 RenderFocusRule=Never
 bAllowHighDPIInGameMode=True
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=8D46338C4954CE41B83FA7A3EF91567B
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
