--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,6 +1,7 @@
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
+ClearInvalidTags=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
@@ -215,6 +216,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Weapon.Ranged",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ranged.Archery",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ranged.Marksmanship",DevComment="")
++GameplayTagList=(Tag="Weapon.Ranged.Sing",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ranged.String",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ranged.Throwing",DevComment="")
 +GameplayTagList=(Tag="Weapon.Ranged.Wind",DevComment="")
