Removed UE Mannequin assets. Player Controller C++ EnhInput
Enhanced Input was migrated from BP to C++ for player controller.

--- a/Config/DefaultUINavInput.ini
+++ b/Config/DefaultUINavInput.ini
@@ -3,7 +3,7 @@
 [/Script/UINavigation.UINavSettings]
 bIgnoreDisabledUINavButton=True
 bRemoveWidgetOnReturn=True
-EnhancedInputContext=/Game/XIRemix/Core/Player/Input/IC_Menu.IC_Menu
+EnhancedInputContext=/Game/XIRemix/Core/Player/Input/IC_MenuNav.IC_MenuNav
 EnhancedInputActions=/UINavigation/Input/UINavEnhancedInputActions.UINavEnhancedInputActions
 DefaultInputContexts=()
 
