--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/XIRemix/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/XIRemix/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 GlobalDefaultGameMode=/Game/XIRemix/Core/GameModes/GM_XIAction.GM_XIAction_C
 GameInstanceClass=/Script/XIRemix.XIGameInstance
 
