GameplayEffectContext and Gameplay Cues.
Created a custom GEC for passing around block/crit/resist/evade/etc... booleans that will be accessible from Gameplay Cues.

Refactored XICharacterAnimMontage data asset to include weapon sheathe/draw montages.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,6 +4,8 @@ ProjectName=XIRemix
 
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 AbilitySystemGlobalsClassName="/Script/XIRemix.XIAbilitySystemGlobals"
+GlobalGameplayCueManagerClass="/Script/XIRemix.XIGameplayCueManager"
+GameplayCueNotifyPaths="/Game/XIRemix"
 
 [/Script/Engine.AssetManagerSettings]
 -PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")))
