--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -25,13 +25,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Montage.MeleeAttack",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.MeleeAttack.MainHand",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.MeleeAttack.SubHand",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Damage.Blocked",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Damage.Evaded",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Damage.Guarded",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Damage.Magic",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Damage.Melee",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Damage.Parried",DevComment="")
-+GameplayTagList=(Tag="GameplayCue.Damage.Resisted",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Attack.Melee",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Exp",DevComment="")
++GameplayTagList=(Tag="GameplayCue.LevelUp",DevComment="")
 +GameplayTagList=(Tag="Passive.DualWield",DevComment="")
 +GameplayTagList=(Tag="Passive.NoHeadGear",DevComment="")
 +GameplayTagList=(Tag="SetByCaller.Attributes.Accuracy",DevComment="")
